--- a/web_app/package.json
+++ b/web_app/package.json
@@ -37,7 +37,9 @@
     "workbox-routing": "^4.3.1",
     "workbox-strategies": "^4.3.1",
     "workbox-webpack-plugin": "^4.3.1",
-    "xmlbuilder2": "^2.4.1"
+    "xmlbuilder2": "^2.4.1",
+    "@types/underscore": "^1.10.0",
+    "underscore": "^1.13.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.30.0",
