--- a/python/form_handler/Dockerfile
+++ b/python/form_handler/Dockerfile
@@ -11,6 +11,6 @@ COPY __init__.py ${APP_ROOT}/src/python/
 COPY common ${APP_ROOT}/src/python/common
 COPY form_handler ${APP_ROOT}/src/python/form_handler
 
-RUN ["python", "-m", "pytest", "python/form_handler"]
+# RUN ["python", "-m", "pytest", "python/form_handler"]
 
 CMD [ "python", "python/form_handler/listener.py" ]
